WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128900
Fix the CLoop build after
r163760
https://bugs.webkit.org/show_bug.cgi?id=128900
Summary
Fix the CLoop build after r163760
Dániel Bátyai
Reported
2014-02-17 04:36:21 PST
Undefined symbols for architecture x86_64: "__ZN3JSC7JSValue6encodeES0_", referenced from: _callToJavaScript in LLIntThunks.o _callToNativeFunction in LLIntThunks.o ld: symbol(s) not found for architecture x86_64 clang: error: linker command failed with exit code 1 (use -v to see invocation) including Operations.h didn't help, that's why JSCJSValueInlines.h needed to be included
Attachments
Proposed fix
(979 bytes, patch)
2014-02-17 04:36 PST
,
Dániel Bátyai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dániel Bátyai
Comment 1
2014-02-17 04:36:55 PST
Created
attachment 224357
[details]
Proposed fix
Csaba Osztrogonác
Comment 2
2014-02-17 04:49:27 PST
Comment on
attachment 224357
[details]
Proposed fix r=me
WebKit Commit Bot
Comment 3
2014-02-17 05:18:22 PST
Comment on
attachment 224357
[details]
Proposed fix Clearing flags on attachment: 224357 Committed
r164217
: <
http://trac.webkit.org/changeset/164217
>
WebKit Commit Bot
Comment 4
2014-02-17 05:18:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug