Fix the CLoop build after r163760 https://bugs.webkit.org/show_bug.cgi?id=128900

Patch by Dániel Bátyai <dbatyai.u-szeged@partner.samsung.com> on 2014-02-17
Reviewed by Csaba Osztrogonác.

* llint/LLIntThunks.cpp:

Canonical link: https://commits.webkit.org/146942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164217 268f45cc-cd09-0410-ab3c-d52691b4dbfc